<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.community.actions.flow.SponsorFlowFragment"
    android:background="@color/background">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/proxima_nova_bold"
        android:text="@string/flow_form"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cancel_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/proxima_nova_semibold"
        android:text="@string/cancel"
        android:textColor="#776F82"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel_action">

        <View
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/rounding_active_tab"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/view2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/rounding_active_tab"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/view3"
            app:layout_constraintStart_toEndOf="@+id/view1"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/rounding_active_tab"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/view4"
            app:layout_constraintStart_toEndOf="@+id/view2"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/rounding_active_tab"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/view5"
            app:layout_constraintStart_toEndOf="@+id/view3"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view5"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/rounding_active_tab"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/view6"
            app:layout_constraintStart_toEndOf="@+id/view4"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view6"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/rounding_default_tab"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view5"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/proxima_nova_semibold"
            android:text="@string/sponsors_solution"
            android:layout_marginBottom="20dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/choice_yes"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:button="@drawable/rb_selector"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:fontFamily="@font/proxima_nova_semibold"
                android:textSize="16sp"
                android:text="Yes"
                android:layout_marginEnd="32dp"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/choice_no"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:button="@drawable/rb_selector"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:fontFamily="@font/proxima_nova_semibold"
                android:textSize="16sp"
                android:text="No"
                tools:ignore="RtlSymmetry" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/proxima_nova_semibold"
            android:text="@string/athlete_obligations"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/allow_promotional_activities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/cb_selector"
                android:paddingStart="20dp"
                android:textColor="@color/white"
                android:fontFamily="@font/proxima_nova_semibold"
                android:textSize="16sp"
                android:gravity="top"
                android:text="@string/participate_in_promotional"
                android:layout_marginBottom="30dp"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/allow_photoshoots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/cb_selector"
                android:paddingStart="20dp"
                android:textColor="@color/white"
                android:fontFamily="@font/proxima_nova_semibold"
                android:textSize="16sp"
                android:gravity="top"
                android:text="@string/photoshoots_and_appear_in_public"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounding_bottom_tab"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_button"
            android:layout_width="155dp"
            android:layout_height="66dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="34dp"
            android:background="@drawable/rounding_skip"
            android:fontFamily="@font/proxima_nova_bold"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_button"
            android:layout_width="155dp"
            android:layout_height="66dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="34dp"
            android:background="@drawable/rounding_next"
            android:fontFamily="@font/proxima_nova_bold"
            android:text="@string/next"
            android:textColor="#333333"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>